--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,13 +1,11 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed a novel methodology and statistical model for personalized biopsy schedules in prostate cancer active surveillance (AS) patients. Personalized schedules utilize patient-specific risks of reclassification. Reclassification is defined as increase in Gleason grade~\citep{epsteinGG2014} from grade~1 to 2 or higher upon repeat biopsy. Reclassification risk calculators are not new~\citep{coley2017prediction,ankerst2015precision}. However, our work has four novel features. First, we developed a statistical model for developing personalized schedules using the world's largest AS cohort PRIAS. Second, we created a methodology to estimate time delay in detection of reclassification (less is beneficial) in a personalized manner, given any biopsy schedule. Thus patients/doctors can compare schedules before making a choice. Third, we externally validated our model in the largest five AS cohorts of the GAP3 database~\citep{gap3_2018}. Fourth, we implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/} for PRIAS and externally validated cohorts.
+We developed a web-application for assisting patients/doctors in making biopsy decisions during prostate cancer active surveillance (AS). Our web-application provides the patient's current and future risks of reclassification (increase in Gleason grade~\citep{epsteinGG2014} from grade~1 to 2 or higher), and personalized biopsy schedules based on this risk. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, for personalized biopsy schedules, we developed a statistical model using the world's largest AS dataset PRIAS. Second, for following any biopsy schedule, fixed or personalized, our model predicts the corresponding time delay in detection of reclassification (less is beneficial). Thus, patients/doctors can compare schedules before making a choice. Third, we externally validated our model in the largest five GAP3 database~\citep{gap3_2018} AS cohorts. Fourth, we implemented our methodology in a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for PRIAS and validated GAP3 cohorts.
 
-Currently, in AS, either fixed schedules are used (e.g., annual biopsies), or PSA is used to trigger biopsies. Both approaches have been criticized~\citep{vickers2009psavelocity,bokhorst2015compliance}. We argue that current approaches have not exploited PSA fully and correctly. For example, using observed PSA is incorrect as it has measurement error. Other approaches utilize only the latest PSA and/or when they utilize all PSA data they assume it changes over time linearly (constant PSA velocity). In contrast, our joint model builds a measurement error free patient-specific profile of PSA using all PSA measurements. It allows PSA to increase/decrease non-linearly over time (non-constant PSA velocity). Subsequently, it consolidates underlying PSA value and velocity, previous biopsy results, and baseline characteristics of a patient, to yield a single personalized estimate for the risk of reclassification. Furthermore, this risk gets updated as more patient data becomes available over follow-up. This is a more holistic approach. Although we have not incorporated newer biomarkers and magnetic resonance imaging (MRI) data, when this information becomes available we can add them as predictors in our model. Decisions based on combined information from multiple sources can yield better results than based on MRI or PSA alone. 
+Currently, biopsies are decided either according to fixed schedules (e.g.,~annual biopsies) or utilize PSA. Both approaches have drawbacks~\citep{vickers2009psavelocity,bokhorst2015compliance}. In particular, PSA has not been exploited fully and correctly. For example, using observed PSA is incorrect because it has measurement error. Other approaches utilize only the latest PSA, and/or when they utilize all PSA data, they assume constant PSA velocity. In contrast, our model employs all PSA measurements to build a patient-specific profile of PSA. This profile is allowed to increase/decrease non-linearly over time (non-constant PSA velocity). Subsequently, the model consolidates the PSA profile, previous biopsy results, and baseline characteristics of a patient, into a single personalized risk of reclassification. This risk also gets updated as more patient data becomes available over follow-up. Due to currently limited magnetic resonance imaging (MRI) data, we could not incorporate it into our model. However, MRI data can be added as a predictor in our model in the future. Decisions based on information combined from multiple sources can yield better results than based on MRI or PSA alone.
 
-Our model is useful for a large number of patients from PRIAS, as well as from the largest five AS cohorts of the GAP3 database in which we validated our model. These are the University of Toronto AS, Johns Hopkins AS, Memorial Sloan Kettering Cancer Center AS, King's College London AS, and Michigan Urological Surgery Improvement Collaborative AS. We required recalibration of our model's baseline hazard of reclassification for all of these cohorts except the Johns Hopkins cohort. This can be explained by the fact that both PIRAS and Johns Hopkins cohorts have the same marginal rate of reclassification over time (Panel~B, Figure~\ref{fig:auc_beforecalib}). Extending our model in smaller cohorts requires only recalibrating our model.
+Our model is useful for a large number of patients from PRIAS (model development), and the largest five GAP3 database AS cohorts (model external validation). These are the University of Toronto AS, Johns Hopkins AS, Memorial Sloan Kettering Cancer Center AS, King's College London AS, and Michigan Urological Surgery Improvement Collaborative AS. During validation, we required recalibration of our model's baseline hazard of reclassification, individually for all validation cohorts. Our model's prediction error was moderate in cohorts with rate of reclassification similar to PRIAS, and large otherwise. Both prediction error and AUC can be improved with newer biomarkers or MRI data in the future.
 
-Our work has important clinical implications. The rate of reclassification after five years of follow-up was capped at 50\% in all cohorts that we evaluated (Figure~\ref{fig:auc_beforecalib}). That is, a large number of patients do not require any biopsy during the first five years of follow-up. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider personalized schedules instead. To assist them in this decision making, the web-application provides an estimate of time delay in detection of reclassification for both personalized and fixed schedules, in a personalized manner. We hope this will objectively address patient apprehensions regarding adverse outcomes in AS.
+Our work has important clinical implications. The rate of reclassification after five years of follow-up was at most 50\% in all cohorts (Figure~\ref{fig:auc_beforecalib}). That is, a large number of patients do not require any biopsy during the first five years of follow-up. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider personalized schedules instead. To assist them in this decision making, the web-application provides an estimate of time delay in detection of reclassification for both personalized and fixed schedules, in a personalized manner. We hope this will objectively address patient apprehensions regarding adverse outcomes in AS.
 
-This work has certain limitations. The proposed model is valid only for the first six years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. This problem can be mitigated by refitting the model with new follow-up data in the future. While we focused only on reclassification, the number of positive biopsy cores can also be used to trigger treatment. We did not consider such additional criteria because they differ between cohorts~\citep{nieboer2018active}, whereas, reclassification is commonly used. Although, reclassification is susceptible to inter-observer variation. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
-
-%may be also add competing risks...additional criteria lead to competing risk too
+This work has certain limitations. Due to currently limited follow-up period of PRIAS and GAP3 cohorts, the proposed model is valid only for a restricted period (Table 12, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. While we focused only on reclassification, the number of positive biopsy cores can also be used to trigger treatment. We did not consider such additional criteria because they differ between cohorts~\citep{nieboer2018active}, whereas reclassification is used widely. Reclassification is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
