--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -60,7 +60,7 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Supplementary Materials for ``Personalized Biopsies in Prostate Cancer Active Surveillance''}
+\title{Supplementary Materials for ``A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance''}
 
 %% Group authors per affiliation:
 \author[1]{Anirudh Tomer\corref{corauthor}, MSc} 
@@ -73,7 +73,7 @@
 \author[3]{Monique J. Roobol, PhD}
 \ead{m.roobol@erasmusmc.nl}
 
-\author[4]{Anders Bjartell, PhD}
+\author[4]{Anders Bjartell, MD, PhD}
 \ead{anders.bjartell@med.lu.se}
 
 \author[2,5]{Ewout W. Steyerberg, PhD}
@@ -89,7 +89,7 @@
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
 \address[5]{Department of Biomedical Data Sciences, Leiden University Medical Center, Leiden, the Netherlands}
-\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
+\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix F}
 
 %% or include affiliations in footnotes:
 \end{frontmatter}
@@ -106,7 +106,9 @@
 \clearpage
 \input{supplementary/E_source_code}
 \clearpage
-
+\section{Appendix A. Members of The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\input{mainmatter/gap3members}
+ 
 \bibliography{bibliography}
 
 \end{document}
