--- a/report/clinical/supplementary/C_biopsy_scheduling.tex
+++ b/report/clinical/supplementary/C_biopsy_scheduling.tex
@@ -9,7 +9,7 @@ Consider some real patients from the PRIAS database shown in Figure~\ref{fig:dem
 \begin{tabular}{l|r}
 \hline
 \hline
-Cohort & Maximum Personalized Schedule Time (years)\\ 
+Cohort & \parbox[t]{3.75cm}{Maximum Personalized\\Schedule Time (years)}\\
 \hline
 PRIAS & 6\\
 KCL & 3\\
