--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -3,9 +3,9 @@
 
 \subsection{Study Cohort}
 \label{subsec:cohort}
-Prostate Cancer International Active Surveillance (PRIAS) is an ongoing (December~2006~--~to date) prospective cohort study of men with low- and very-low risk prostate cancer diagnoses~\citep{bul2013active}. More than 100 medical centers from 17 countries contributed to PRIAS, using a common protocol (\url{www.prias-project.org}). Upon inclusion in AS, PSA was measured quarterly for the first two years of follow-up and semiannually thereafter. Biopsies were scheduled at year one, four, seven, and ten of follow-up. Additional yearly biopsies were scheduled when PSA doubling time was between zero and ten years.
+For developing a statistical model to power our web-application, we used the Prostate Cancer International Active Surveillance (PRIAS) database. It is an ongoing (December~2006~--~to date) prospective cohort study of men with low- and very-low risk prostate cancer diagnoses~\citep{bul2013active}. More than 100 medical centers from 17 countries contributed to PRIAS, using a common protocol (\url{https://www.prias-project.org}). Upon inclusion in PRIAS, PSA was measured quarterly for the first two years of follow-up and semiannually thereafter. Biopsies were scheduled at year one, four, seven, and ten of follow-up. Additional yearly biopsies were scheduled when PSA doubling time was between zero and ten years.
 
-We selected all 7813 patients who had Gleason grade~1~\citep{epsteinGG2014} at the time of inclusion in PRIAS (Table~\ref{table:prias_summary}). Our primary event of interest is increase in this Gleason grade upon repeat biopsy, called \textit{reclassification} (1134 patients). Reclassification is a trigger for treatment advice in PRIAS. Although, 2250 patients were provided treatment on the basis of their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. Our reasons for focusing solely on reclassification are, namely reclassification is strongly associated with cancer related outcomes, and other triggers for treatment vary between cohorts.
+We selected all 7813 patients who had Gleason grade~1~\citep{epsteinGG2014} at the time of inclusion in PRIAS (Table~\ref{table:prias_summary}). Our primary event of interest is increase in this Gleason grade upon repeat biopsy, called \textit{reclassification} (1134 patients). Reclassification is a trigger for treatment advice in PRIAS. Although, 2250 patients were provided treatment on the basis of their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. Our reasons for focusing solely on reclassification are, namely, reclassification is strongly associated with cancer-related outcomes, and other triggers for treatment vary between cohorts.
 
 \begin{table}
 \small\sf\centering
