--- a/report/clinical/supplementary/B_risk_prediction_validation.tex
+++ b/report/clinical/supplementary/B_risk_prediction_validation.tex
@@ -10,7 +10,7 @@ g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}
 &\times p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{j}(s), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{D}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
 \end{aligned}
 \end{equation*}
-The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain reclassification in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a limited follow-up period.
+The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain reclassification in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
 
 The cumulative risk of reclassification can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
 \begin{equation}
@@ -65,7 +65,7 @@ We calculate AUC and MAPE in a time-dependent manner. More specifically, given t
 \begin{tabular}{l|r}
 \hline
 \hline
-Cohort & Maximum Prediction Time (years)\\ 
+Cohort & \parbox[t]{3.5cm}{Maximum Prediction\\Time (years)}\\
 \hline
 PRIAS & 6\\
 KCL & 3\\
